--- a/.gitignore
+++ b/.gitignore
@@ -253,3 +253,5 @@ PythonProject/PythonProject/Images/cifar-10-batches-py/data_batch_5
 PythonProject/PythonProject/Images/cifar-10-batches-py/data_batch_4
 PythonProject/PythonProject/Images/cifar-10-batches-py/data_batch_3
 PythonProject/PythonProject/Images/cifar-10-batches-py/data_batch_2
+PythonProject/PythonProject/PythonProject.pyproj
+PythonProject/PythonProject/PythonProject.pyproj
